# kurup

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
notes/: .Kurup.md.kurup  Kurup.md
static/: edit_image_handler.js  image_handler.js  text_formatter.js
utils/: fun.py  image_handler.py  notes_handler.py
